Improve texture coords for extrusion geometry, especially spindle roofs
* Support texture snapping for shape extrusion
* Measure actual distances along the outside of the extruded geometry
* Avoid texture artifacts when extrusions end in a point